# Sleep-Quality-Federated-MLP-Regressor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: run_global_mae.py
src/mlp/: data.py  model.py
src/mlp/client/: client_app.py  client_params.py  run_all.py
src/mlp/server/: config.py  server_flwr.py  strategy.py
src/preprocessing/: extract_ts_features.py  preprocess_global.py
