[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-quality-mlp-regressor"
version = "0.1.0"
description = "Sleep Quality MLP Regressor"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
  "flwr",
  "tensorflow>=2.10.0",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
